tests/deny-resources/pod-skip.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-skip
  namespace: bikkfabian
  labels:
    policy.example/allow-missing-resources: "true"
spec:
  containers:
  - name: c3
    image: busybox:1.36
    command: ["sh","-c","sleep 1"]
    # intentionally missing resources
