tests/deny-resources/pod-success.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-success
  namespace: bikkfabian
spec:
  containers:
  - name: c
    image: busybox:1.36
    command: ["sh","-c","sleep 1"]
    resources:
      requests:
        cpu: "50m"
        memory: "32Mi"
      limits:
        cpu: "100m"
        memory: "64Mi"
